@startuml

class MainVencimentos{
    +void main(String[] args)
}
abstract class Trabalhador{
    - nome:String
    - {static}String NOME_POR_OMISSAO {readOnly}
    + Trabalhador(String nome)
    + Trabalhador()
    + getName(): String
    + setNome(nome: String): void
    + ToString(): String
    + {abstract} calcularVencimento(): float
}
class TrabalhadorPeca {
    - numeroPecasTipo1: int
    - numeroPecasTipo2: int
    - {static} NUMERO_PECAS_TIPO1_POR_OMISSAO: int {readOnly}
    - {static} NUMERO_PECAS_TIPO2_POR_OMISSAO: int {readOnly}
    + TrabalhadorPeca(nome: String ,numeroPecasTipo1: int, numeroPecasTipo2: int)
    + TrabalhadorPeca(nome: String)
    + TrabalhadorPeca()
    + getNumeroPecasTipo1(): int
    + getNumeroPecasTipo2(): int
    + getPagamentoTipo1(): float
    + getPagamentoTipo2(): float
    + setNumeroPecasTipo1(numeroPecasTipo1: int): void
    + setNumeroPecasTipo2(numeroPecasTipo2: int): void
    + setPagamentoPecaTipo1(pagamentoPecaTipo1: float): void
    + setPagamentoPecaTipo2(pagamentoPecaTipo2: float): void
    + toString(): String
    + calcularVencimento(): float

}
class TrabalhadorHora {
    - numeroHora: int
    - pagamentoHora: float
    - {static} NUMERO_HORA_POR_OMISSAO: int {readOnly}
    - {static} PAGAMENTO_HORA_POR_OMISSAO: int {readOnly}
    + TrabalhadorHora(nome: String, numeroHora: int, pagamentoHora: float)
    + TrabalhadorHora(nome: String)
    + TrabalhadorHora()
    + getNumeroHora(): int
    + getPagamentoHora(): float
    + setNumeroHora(numeroHora: int): void
    + setPagamentoHora(pagamentoHora: float): void
    + toString(): String
    + calcularVencimento(): float
}
class TrabalhadorComissao {
    - salarioBase: float
    - vendas: float
    - comissao: float
    - {static} SALARIO_BASE_POR_OMISSAO: float {readOnly}
    - {static} VENDAS_POR_OMISSAO: float  {readOnly}
    - {static} COMISSAO_POR_OMISSAO: float {readOnly}
    + TrabalhadorComissao(nome: String,salarioBase: float, vendas: float,comissao: float)
    + TrabalhadorComissao(nome: String)
    + TrabalhadorComissao()
    + getSalarioBase(): float
    + getVendas(): float
    + getComissao(): float
    + setSalarioBase(salarioBase: float): void
    + setVendas(vendas: float): void
    + setVendas(float comissao): void
    + toString(): String
    + calcularVencimento(): float
}

Trabalhador <|-- TrabalhadorComissao
Trabalhador <|-- TrabalhadorHora
Trabalhador <|-- TrabalhadorPeca


@enduml